[workspace]
members = [
    "bin/*",
    "programs/mango-v4",
    "lib/*",
]

[workspace.dependencies]
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango" }
pyth-sdk-solana = "0.8.0"
pyth-solana-receiver-sdk = "0.3.0"
serum_dex = { git = "https://github.com/openbook-dex/program.git", default-features=false }
mango-feeds-connector = "0.2.1"

# Use 1.16.7 versions to maintain compatibility with mango-v4 dependencies
solana-address-lookup-table-program = "1.17.3"
solana-account-decoder = "1.17.3"
solana-client = "1.17.3"
solana-logger = "1.17.3"
solana-program = "1.17.3"
solana-program-test = "1.17.3"
solana-rpc = "1.17.3"
solana-sdk = { version = "1.17.3", default-features = false }
solana-transaction-status = "1.17.3"

[profile.release]
overflow-checks = true

[patch.crates-io]
# Custom patch for gzip-encoded responses
jsonrpc-core-client = { git = "https://github.com/ckamm/jsonrpc.git", branch = "ckamm/http-with-gzip" }

# Enforce 1.16.7 versions of solana-* dependencies globally
solana-address-lookup-table-program = "1.17.3"
solana-account-decoder = "1.17.3"
solana-client = "1.17.3"
solana-logger = "1.17.3"
solana-program = "1.17.3"
solana-program-test = "1.17.3"
solana-rpc = "1.17.3"
solana-sdk = { version = "1.17.3", default-features = false }
solana-transaction-status = "1.17.3"
